# opsiq-runtime

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
decision_packs/_schemas/: decision_pack.schema.json  tenant_enablement.schema.json
decision_packs/order_fulfillment_risk/1.0.0/: pack.json
docker/: Dockerfile  entrypoint.sh
frontend/: Dockerfile  README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DecisionHistoryTimeline.tsx  DecisionStateBadge.tsx  EvidenceViewer.tsx  RunStatusBadge.tsx
frontend/types/: decisions.ts  packs.ts  runs.ts
scripts/: run_local.sh  validate_packs.py
src/opsiq_runtime/: settings.py
tenants/price_chopper/: packs.json
tenants/vmc_group/: packs.json
tests/contract/: test_decision_output_shape.py  test_evidence_shape.py
tests/integration/: test_api_endpoints.py  test_databricks_smoke.py  test_pack_endpoints.py  test_pack_readiness_endpoints.py
tests/unit/: test_api_decisions_repo.py  test_customer_order_impact_risk_evaluator.py  test_databricks_inputs_repo_affinity.py  test_databricks_inputs_repo_coupon_offer.py  test_databricks_inputs_repo_slate.py  test_operational_risk_evaluator.py  test_order_fulfillment_risk_evaluator.py  test_order_line_fulfillment_risk_evaluator.py  test_pack_loader.py  test_pack_readiness_calculator.py  test_shopper_coupon_offer_set_evaluator.py  test_shopper_frequency_trend_evaluator.py  test_shopper_health_classification_evaluator.py  test_shopper_item_affinity_score_evaluator.py  test_shopper_weekly_ad_slate_evaluator.py
(+145 files in other folders)
