[project]
name = "opsiq-runtime"
version = "0.1.0"
description = "Decision Intelligence Runtime for OpsIQ"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "OpsIQ", email = "dev@opsiq.example" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.0",
  "databricks-sql-connector>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
]
databricks = [
  "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opsiq_runtime"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "B", "C4", "UP", "DTZ"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.0", "ruff>=0.6.0", "black>=24.8.0"]

